<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    app:cardBackgroundColor ="@color/cellColor"
    app:cardCornerRadius="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="72dp"
            android:layout_height="71dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/ic_videogame_asset" />

        <LinearLayout
            android:layout_width="226dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="100dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/gameName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:lines="2"
                android:text="@string/gameName"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="1"
                android:text="@string/chooseAGenre"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="1"
                android:text="@string/chooseADevice"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="1"
                android:text="@string/online"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/deleteGame"
            android:layout_width="50dp"
            android:layout_height="37dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="-3dp"
            android:layout_marginBottom="77dp"
            android:src="@drawable/delete"
            app:tint="@color/deleteButton" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>