<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="4dp"
    android:layout_marginTop="2dp"
    android:layout_marginRight="4dp"
    android:layout_marginBottom="2dp"
    app:cardBackgroundColor="@color/cellColor"
    app:cardCornerRadius="20dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="136dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="164dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sessionCellGameName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="2"
                    android:text="@string/gameName"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sessionCellGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/chooseAGenre"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


                <TextView
                    android:id="@+id/sessionCellDevice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/chooseADevice"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/sessionCellType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/online"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/deleteSession"
                        android:layout_width="43dp"
                        android:layout_height="38dp"
                        android:layout_marginEnd="-1dp"
                        android:layout_marginBottom="144dp"
                        android:src="@drawable/delete"
                        app:tint="@color/deleteButton" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView

                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:lines="1"
                            android:text="Total Length:"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView

                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:lines="1"
                            android:text="Game Length:"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView

                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:lines="1"
                            android:text="Break Length:"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/sessionCellLength"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:lines="1"
                            android:text="totalLength"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/sessionCellGameLength"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:lines="1"
                            android:text="gameLength"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/sessionCellBreakLength"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:lines="1"
                            android:text="breakLength"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>